--- a/Web-Task/WebContent/FooterStyleSheet.css
+++ b/Web-Task/WebContent/FooterStyleSheet.css
@@ -1,43 +1,45 @@
 @CHARSET "ISO-8859-1";
-.footer-body{
+
+.footer-body {
 	margin-left: 8%;
 	margin-right: 8%;
 }
 
-.footer-secondpart{
-	//border: 5px solid;
+.footer-secondpart { //
+	border: 5px solid;
 	clear: both;
 	width: auto;
 	height: 350px;
-	color: white;
-	//font-family: 'Noto Serif';
-	font-family: 'Open Sans';
-	//padding-left: 10px;
+	color: white; //
+	font-family: 'Noto Serif';
+	font-family: 'Open Sans'; //
+	padding-left: 10px;
 }
 
-.footer-data-left{
+.footer-data-left {
 	float: left;
 	text-align: left;
 	padding-right: 50px;
 }
 
-.footer-data-right{
+.footer-data-right {
 	float: right;
 	text-align: left;
-	padding-right: 60px;
-	//padding-right: 30px;
+	padding-right: 60px; //
+	padding-right: 30px;
 }
 
-th{
+th {
 	padding-bottom: 8px;
 	font-weight: bold;
 }
-td{
+
+td {
 	padding-bottom: 12px;
 	font-size: 14px;
 }
 
-class.{
+class .{
 	height: 5px;
 	width: 5px;
 }
@@ -47,23 +49,21 @@ class.{
 padding-left: 25px;;
 padding-bottom: 15px;
 }*/
-
-footer-vertical-line.{
-//float: left;
-  //padding-left: 50px;
-  border-left: 6px solid green;
-  height: 25px;
+footer-vertical-line .{ //
+	float: left; //
+	padding-left: 50px;
+	border-left: 6px solid green;
+	height: 25px;
 }
 
 .vl {
-float: left;
+	float: left;
 	border-left: 2px solid white;
 	height: 20px;
-	 
 	padding-right: 10px;
 }
 
-body{
+body {
 	margin: 0px;
 	padding: 0px;
 }
